# SecSuite

./: .buildinfo  .gitignore  .pre-commit-config.yaml  DEV.md  Makefile  README.md  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js  security.html
.doctrees/: environment.pickle  index.doctree  installation.doctree  quickstart.doctree  security.doctree
.doctrees/api/: modules.doctree
.github/: copilot-instructions.md
.github/workflows/: ci.yml
_modules/: index.html
_modules/secsuite/: example.html
_sources/: installation.rst.txt  security.rst.txt
api/: modules.html
docs/: conf.py  index.rst  quickstart.rst
docs/api/: modules.rst
scripts/: __init__.py  dev  download_artifacts.py  security_bandit_check.py  security_safety_check.py
src/secsuite/: __init__.py  example.py  py.typed
tests/: conftest.py  test_download_artifacts.py  test_example.py
